fix. 사람수(N)이 0보다 작은경우, 제거 간격이 음수거나 0인 경우 예외처리 추가  with 리뷰반영